Fixed a bug where long running text would be cut off

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -64,7 +64,8 @@ body{
 }
 
 .book {
-  width: 90%;
+  width: 100%;
+  margin-right: 1vw;
 }
 
 .book-entry-details > * {
